# pydentity-core-tortoise

./: LICENSE  pyproject.toml  readme.md
example/: main.py  model.py
pydentity_db/: __init__.py  fields.py  models.py
pydentity_db/base/: abstract.py  model.py
pydentity_db/stores/: __init__.py  role_store.py  user_store.py
pydentity_db_tortoise/: __init__.py  db_context.py  exc.py  fields.py  models.py
pydentity_db_tortoise/models/: __init__.py  abstract.py  fields.py
pydentity_db_tortoise/stores/: __init__.py  role_store.py  user_store.py
tests/: conftest.py  test_role_store.py  test_user_store.py
