[tool.poetry]
name = "pydentity-db-tortoise"
version = "0.1.3"
description = "Database adapter for TortoiseORM."
authors = ["udachin077 <pypi.udachin@yandex.ru>"]
license = "MIT"
homepage = "https://github.com/udachin077/pydentity-db-tortoise"
repository = "https://github.com/udachin077/pydentity-db-tortoise.git"
exclude = [
    "tests",
    "example"
]

[tool.poetry.dependencies]
python = "^3.12"
tortoise-orm = "^0.21.5"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
